<resources>
    <string name="app_name">حفلاتى</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="email_oR_phone">رقم الجوال</string>
    <string name="password">كلمة المرور</string>
    <string name="login">تسجيل الدخول</string>
    <string name="forgetPassword">هل نسيت كلمة المرور ؟</string>
    <string name="haveNot_account">ليس لديك حساب ؟</string>
    <string name="sign_now">سجل الأن</string>
    <string name="signUp">انشاء حساب</string>
    <string name="name">الأسم</string>
    <string name="email">البريد الالكترونى</string>
    <string name="sign">تسجيل</string>
    <string name="have_an_account">لديك حساب بالفعل ؟</string>
    <string name="login_now">دخول</string>
    <string name="hotels">الفنادق</string>
    <string name="phone">رقم الجوال</string>
    <string name="my_info">بياناتى :</string>
    <string name="save">حفظ</string>
    <string name="details">التفاصيل</string>
    <string name="confirm_booking">تأكيد الحجز</string>
    <string name="booking_date">تاريخ الحجز</string>
    <string name="booking_details">تفاصيل الخدمة</string>
    <string name="required">هذا الحقل مطلوب</string>
    <string name="login_success">تم الدخول بنجاح</string>
    <string name="get_location">اضغط لتحديد الموقع</string>
    <string name="title_activity_maps">Map</string>
    <string name="enter_valid_email">اكتب بريد الكترونى صحيح</string>
    <string name="register_success">تم التسجيل بنجاح, برجاء فحص البريد الخاص بك </string>
    <string name="about">عن التطبيق</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">الرئيسية</string>
    <string name="qaa_name">اسم القاعة :</string>
    <string name="qaa_price">سعر القاعة :</string>
    <string name="rate">التقييم</string>
    <string name="my_booking">حجوزاتى</string>
    <string name="app_policy">سياسة التطبيق</string>
    <string name="settings">اعدادات الحساب</string>
    <string name="contact_us">اتصل بنا</string>
    <string name="logout">تسجيل خروج</string>
    <string name="restore_pass">استرجاع كلمة المرور</string>
    <string name="send_code_through">برجاء ارسال الكود عن طريق</string>
    <string name="or">او</string>
    <string name="send">ارسال</string>
    <string name="item_width">تتسع :</string>
    <string name="item_shows">عدد المشاهدات :</string>
    <string name="country">المدينة :</string>
    <string name="booking_now">احجز الان</string>
    <string name="my_profile">الملف الشخصى</string>
    <string name="change_location">اضغط لتغيير موقعك</string>
    <string name="code">كود التأكيد</string>
    <string name="enter_code">برجاء ادخال كود التأكيد للتحقق من حسابك</string>
    <string name="confirm_new_pass">تاكيد كلمة المرور</string>
    <string name="new_pass">كلمة مرور الجديدة</string>
    <string name="send_new_pass">برجاء ادخال كلمة المرور الجديدة</string>
    <string name="hafalaty">حفلاتى</string>
    <string name="time">الوقت</string>
    <string name="booking_accepted">تم قبول الحجز</string>
    <string name="signing">جارى الدخول</string>
    <string name="signup">جارى التسجيل</string>
    <string name="error_connection">خطأ فى الاتصال بالشبكة!</string>
    <string name="price">السعر</string>
    <string name="yes">موافق</string>
    <string name="No">الغاء</string>
    <string name="add_service">اضافة خدمة</string>
    <string name="my_services">خدماتى</string>
    <string name="no_bookings_now">لا توجد حجوزات حالية</string>
    <string name="update_sevice">تحديث الخدمة</string>
    <string name="delete_service">مسح</string>
    <string name="user">كعميل</string>
    <string name="developer">كمقدم خدمة</string>
    <string name="add_service_img">اضف صورة الخدمة</string>
    <string name="add">اضف الخدمة</string>
    <string name="sign_as">التسجيل</string>
    <string name="email_already_exist">هذا الايميل مسجل مسبقا!</string>
    <string name="Adding">جارى الاضافة</string>
    <string name="no_services_now">لا توجد خدمات خاصة بك</string>
    <string name="your_comment">اكتب تعليقا هنا</string>
    <string name="write_rate">تقييم الخدمة</string>
    <string name="publish">نشر</string>
    <string name="comments">التعليقات</string>
    <string name="updatting">جارى التحديث</string>
    <string name="update_booking">تحديث الحجز</string>
    <string name="sending">جارى الارسال</string>
    <string name="changing">جارى التغيير</string>
    <string name="outofApp">هل تريد الخروج من التطبيق ؟</string>
    <string name="dismiss">الغاء</string>
    <string name="no_available_comments">لا توجد تعليقات حالية</string>
    <string name="contact_email">البريد الالكترونى :</string>
    <string name="contact_phone">رقم الجوال :</string>
    <string name="contact_fax">فاكس :</string>
    <string name="no_available_services">لا توجد خدمات حالية</string>
    <string name="dataChangedSuccesfully">تم تحديث بياناتك</string>
    <string name="no_notifications">لا توجد اشعارات حالية</string>
    <string name="notifications">الاشعارات</string>
    <string name="incorrect_email_or_password">خطأ الايميل او الباسورد</string>
    <string name="accept">قبول</string>
    <string name="reject">رفض</string>
    <string name="logging_out">جارى الخروج</string>
    <string name="get_service_location">اضغط لتحديد موقع الخدمة</string>
    <string name="update_location">تحديث موقع الخدمة</string>
</resources>
