<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/user"
            android:title="@string/my_profile" />

        <item
            android:id="@+id/nav_booking"
            android:icon="@drawable/reserve"
            android:title="@string/my_booking" />
        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/reserve"
            android:title="@string/my_services" />
        <item
            android:id="@+id/nav_Add_Service"
            android:icon="@drawable/reserve"
            android:title="@string/add_service" />
        <item
            android:id="@+id/nav_Notifications"
            android:icon="@drawable/ic_notify"
            android:title="@string/notifications" />
        <item
            android:id="@+id/nav_app_policy"
            android:icon="@drawable/policy"
            android:title="@string/app_policy" />
        <!--<item-->
            <!--android:id="@+id/nav_settings"-->
            <!--android:icon="@drawable/setting"-->
            <!--android:title="@string/settings" />-->
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/contactus"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/signin"
            android:title="@string/logout" />
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
