<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    tools:context="com.tasmim.a7afalaty.activities.ForgetPass">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/login_btn_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/restore_pass"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/restore_pass_back_txt_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="20dp"
            android:background="@drawable/arwo" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="240dp"
                android:layout_height="220dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:src="@drawable/password" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:text="@string/send_code_through"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:visibility="gone">

                <EditText
                    android:id="@+id/pass_phone_ed"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/show_item_bg"
                    android:gravity="center"
                    android:hint="@string/phone"
                    android:inputType="numberSigned"
                    android:textSize="16sp" />
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/or"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/pass_email_ed"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/show_item_bg"
                    android:gravity="center"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="16sp" />
            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/send_btn_id"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_btn_bg"
                android:text="@string/send"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
