<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:layoutDirection="rtl"
    app:cardCornerRadius="5dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/show_item_bg"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:id="@+id/booking_item_img_id"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:background="@drawable/show_item_bg"
                android:src="@drawable/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="4dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/booking_item_name_txt_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/hafalaty"
                        android:textColor="@android:color/black"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/booking_item_state_txt_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/pdlg_space_1.0x"
                        android:background="@drawable/login_btn_bg"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLines="1"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/booking_accepted"
                        android:textColor="@android:color/white" />
                </LinearLayout>

                <TextView
                    android:id="@+id/booking_item_time_txt_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginTop="3dp"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:padding="2dp"
                    android:text="@string/time"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/booking_item_desc_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    android:gravity="right"
                    android:maxLines="3"
                    android:text="@string/details" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/update_booking_btn_id"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:background="@drawable/login_btn_bg"
                android:padding="5dp"
                android:text="@string/update_booking"
                android:textColor="@android:color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/delete_booking_btn_id"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_marginRight="@dimen/pdlg_space_1.0x"
                android:background="@drawable/login_btn_bg"
                android:text="@string/delete_service"
                android:textColor="@android:color/white"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>